Fixed intraboxes being slightly covered by the header in the I3 themes

--- a/styles/i3-light/intrabox/intrabox.css
+++ b/styles/i3-light/intrabox/intrabox.css
@@ -2,7 +2,7 @@
 	position:fixed;
 	/*position:absolute;*/
 	width:256px;
-	top:76px;
+	top:100px;
 	left:1px;
 	bottom:0px;
 	
